STB-3369 - Added test coverage